# horoscope_cli

./: .gitignore  API.md  CALENDAR_OUTPUT_FORMATS_COMPLETE.md  CALENDAR_SEARCH_TABULAR_LIST_FORMAT.md  CALENDAR_SYSTEMS_COMPARISON.md  CALENDAR_SYSTEMS_QUICK_REFERENCE.md  CMakeLists.txt  CMakeLists_Enhanced.txt  EASTERN_CHARTS.md  ENHANCED_HINDU_CALENDAR.md  ENHANCED_README.md  ENHANCED_TABULAR_VIEW_IMPLEMENTATION.md  FEATURE_SUMMARY.md  INSTALL.md  LICENSE  MANUAL.md  MYANMAR_MULTI_CRITERIA_SEARCH.md  README.md  SIDEREAL_ENHANCEMENT.md  SOLAR_SYSTEM_FEATURE.md  SWISS_EPHEMERIS_INTEGRATION.md  USER_MANUAL.md  USER_MANUAL_processed.md  book_cover.txt  build.sh  build_enhanced.sh  convert_to_pdf.py  convert_to_pdf.sh  create_graphics_enhanced_pdf.py  debug_myanmar.cpp  demo_calendar_output_formats.sh  demo_hindu_monthly_calendar.sh  demo_myanmar_monthly_calendar.sh  demo_three_calendar_systems.sh  enhance_user_manual_graphics.py  example_full_moon_or_yatyaza.sh  facebook_post.md  test.sh  test_all_chart_styles.sh  test_bangkok  (+23 more)
data/: README.md
docs/: ADVANCED_ASTRONOMICAL_CALCULATIONS.md  CALCULATION_METHODS_REFERENCE.md  ENHANCED_FEATURES_USAGE.md  FEATURE_SUMMARY.md  IMPLEMENTATION_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  README.md  SWISS_EPHEMERIS_REFERENCE.md
docs/calendar-systems/: MYANMAR_CALENDAR_VERIFICATION.md  (+3 more)
examples/: README.md  birth_data.conf  buddha_birth_date_finder.sh  buddha_exact_pattern.csv  buddha_finder_improvements.md  calendar_search_quick_reference.sh  chart_comparison.sh  combined_calendar_search_examples.sh  east_indian_examples.sh  eastern_chart_examples.sh  hindu_calendar_search_examples.sh  indian_personalities.conf  myanmar_calendar_search_examples.sh  myanmar_multi_criteria_search_examples.sh
include/: advanced_astrology.h  ai_interpretation.h  aspect_calculator.h  astro_calendar.h  astro_types.h  birth_chart.h  conjunction_calculator.h  eastern_chart_drawer.h  eclipse_calculator.h  ephemeris_manager.h  ephemeris_table.h  hindu_calendar.h  hindu_monthly_calendar.h  horoscope_calculator.h  house_calculator.h  interactive_mode.h  kp_system.h  localization.h  location_manager.h  myanmar_calendar.h  myanmar_monthly_calendar.h  planet_calculator.h  plugin_system.h  predictive_astrology.h  professional_table.h  solar_system_drawer.h  western_chart_drawer.h
src/: aspect_calculator.cpp  astro_calendar.cpp  astro_types.cpp  birth_chart.cpp  conjunction_calculator.cpp  eastern_chart_drawer.cpp  eclipse_calculator.cpp  eclipse_calculator_simple.cpp  ephemeris_manager.cpp  ephemeris_table.cpp  hindu_calendar.cpp  hindu_monthly_calendar.cpp  horoscope_calculator.cpp  house_calculator.cpp  kp_system.cpp  location_manager.cpp  main.cpp  main.cpp.backup  myanmar_calendar.cpp  myanmar_calendar.cpp.bak  myanmar_calendar_backup.cpp  myanmar_calendar_new.cpp  myanmar_monthly_calendar.cpp  planet_calculator.cpp  professional_table.cpp  solar_system_drawer.cpp  western_chart_drawer.cpp
(+9 files in other folders)
